syntax = "proto3";

package vela.api.service.clusterservice;
option go_package = "github.com/oam-dev/velacp/pkg/proto/clusterservice";

import "pkg/datastore/model/cluster.proto";

service ClusterService {
  rpc PutCluster(PutClusterRequest) returns (PutClusterResponse) {}
  rpc GetCluster(GetClusterRequest) returns (GetClusterResponse) {}
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse) {}
  rpc DelCluster(DelClusterRequest) returns (DelClusterResponse) {}
}

message PutClusterRequest {
  vela.api.model.Cluster cluster = 1;
}

message PutClusterResponse {
}

message GetClusterRequest {
  string name = 1;
}

message GetClusterResponse {
  vela.api.model.Cluster cluster = 1;
}

message ListClustersRequest {
}

message ListClustersResponse {
  repeated vela.api.model.Cluster clusters = 1;
}

message DelClusterRequest {
  string name = 1;
}

message DelClusterResponse {
}
